tests/neg/t1625.check
-- Error: tests/neg/t1625.scala:2:19 -----------------------------------------------------------------------------------
2 |  def foo(x: String*, y: String*, c: String*): Int // error: an identifier expected, but ',' found // error: an identifier expected, but ',' found
  |                   ^
  |                   spread operator `*` not allowed here; must come last in a parameter list
-- Error: tests/neg/t1625.scala:2:31 -----------------------------------------------------------------------------------
2 |  def foo(x: String*, y: String*, c: String*): Int // error: an identifier expected, but ',' found // error: an identifier expected, but ',' found
  |                               ^
  |                               spread operator `*` not allowed here; must come last in a parameter list
